# old-shadow

./: .gitignore  Makefile.am  README.md  acinclude.m4  autogen.sh  configure.ac  shadow.sublime-project  shadow.sublime-workspace
scripts/: 16k.py
src/: Makefile  Makefile.am  config.cpp  config.h  logging.cpp  logging.h  main.cpp  shadow.cpp  shadow.h
src/host/: Makefile.am  host.h  sysdeps.h
src/host/posix/: main.cpp  signal.cpp
src/mk/: build.mk  clean.mk  tools.mk
src/net/: Makefile.am  net.cpp  net.h  port.h  private.h  server.h  tcp.h  telnet.h
